update String1 class

--- a/EclopseWorkSpace/.recommenders/caches/identified-project-coordinates.json
+++ b/EclopseWorkSpace/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"F:\\Selenium\\Java\\tools\\selenium-java-2.53.1\\selenium-2.53.1\\selenium-java-2.53.1.jar","type":"JAR","hints":{}},"ABSENT"],[{"location":"C:\\Program Files\\Java\\jre7","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.7"}},"jre:jre:1.7.0"]]
+[[{"location":"F:\\CodeProject\\Github_Java\\EclopseWorkSpace\\Project1","type":"PROJECT","hints":{"PROJECT_NAME":"Project1"}},"ABSENT"]]
